@@ -1,43 +1,0 @@
-"# README" 
-Updates--
-2017-06-15 v1.08: Added browser_action icon, removed Barron's, fixed Financial Times (ft.com), added options link to popup
-2017-05-14: Ported to Firefox
-2017-04-16: Added MIT Technology Review (technologyreview.com), NRC (nrc.nl), The Courier Mail (couriermail.com.au).
-2017-04-05: Added 'Nikkei Asian Review'.
-2017-02-25: If you are trying to view NYT articles or tired of the WSJ popup, try installing an adblocker (I recommend 'uBlock Origin').
-2017-02-16: Added 'The Australian'.
-2017-02-09: WSJ working again (bypass paywall)! Also added glassdoor, nytimes, seattletimes.
-
-Bypass the following sites' paywalls:
-
-The Age (theage.com.au)
-The Australian (theaustralian.com.au)
-Baltimore Sun (baltimoresun.com)
-Barron's (barrons.com)
-Crain's Chicago Business (chicagobusiness.com)
-Chicago Tribune (chicagotribune.com)
-Daily Press (dailypress.com)
-The Economist (economist.com)
-Financial Times (ft.com)
-Glassdoor (glassdoor.com)
-Hartford Courant (courant.com)
-Harvard Business Review (hbr.org)
-Inc.com (inc.com)
-Los Angeles Times (latimes.com)
-Medscape (medscape.com)
-MIT Technology Review (technologyreview.com)
-Nikkei Asian Review (asia.nikkei.com)
-NRC (nrc.nl)
-The Courier Mail (couriermail.com.au)
-The Morning Call (mcall.com)
-The Nation (thenation.com)
-The New York Times (nytimes.com)
-The New Yorker (newyorker.com)
-OrlandoSentinel (orlandosentinel.com)
-Quora (quora.com)
-SunSentinel (sun-sentinel.com)
-The Seattle Times (seattletimes.com)
-The Sydney Morning Herald (smh.com.au)
-The Telegraph (telegraph.co.uk)
-The Washington Post (washingtonpost.com)
-The Wall Street Journal (wsj.com)
