@@ -4,15 +4,19 @@ var defaultSites = {
   'The Age': 'theage.com.au',
   'The Australian': 'theaustralian.com.au',
   'Baltimore Sun': 'baltimoresun.com',
+  'Barron\'s': 'barrons.com',
   'Crain\'s Chicago Business': 'chicagobusiness.com',
   'Chicago Tribune': 'chicagotribune.com',
   'Daily Press': 'dailypress.com',
   'The Economist': 'economist.com',
   'Financial Times': 'ft.com',
   'Glassdoor': 'glassdoor.com',
+  'Haaretz': 'haaretz.co.il',
   'Hartford Courant': 'courant.com',
   'Harvard Business Review': 'hbr.org',
+  'Het Financieele Dagblad': 'fd.nl',
   'Inc.com': 'inc.com',
+  'Le Temps': 'letemps.ch',
   'Los Angeles Times': 'latimes.com',
   'Medscape': 'medscape.com',
   'MIT Technology Review': 'technologyreview.com',
@@ -44,7 +48,9 @@ var allow_cookies = [
 'nytimes.com',
 'wsj.com',
 'couriermail.com.au',
-'ft.com'
+'ft.com',
+'letemps.ch',
+'fd.nl'
 ]
 
 // Removes cookies after page load
@@ -52,7 +58,9 @@ var remove_cookies = [
 'theaustralian.com.au',
 'asia.nikkei.com',
 'couriermail.com.au',
-'ft.com'
+'ft.com',
+'letemps.ch',
+'fd.nl'
 ]
 
 function setDefaultOptions() {
