@@ -25,5 +25,5 @@
 	},
 
 	"permissions": [ "cookies", "<all_urls>", "storage", "webRequest", "webRequestBlocking"],
-	"version": "1.0.8"
+	"version": "1.0.9"
 }
