@@ -2,15 +2,19 @@ var defaultSites = {
   'The Age': 'theage.com.au',
   'The Australian': 'theaustralian.com.au',
   'Baltimore Sun': 'baltimoresun.com',
+  'Barron\'s': 'barrons.com',
   'Crain\'s Chicago Business': 'chicagobusiness.com',
   'Chicago Tribune': 'chicagotribune.com',
   'Daily Press': 'dailypress.com',
   'The Economist': 'economist.com',
   'Financial Times': 'ft.com',
   'Glassdoor': 'glassdoor.com',
+  'Haaretz': 'haaretz.co.il',
   'Hartford Courant': 'courant.com',
   'Harvard Business Review': 'hbr.org',
+  'Het Financieele Dagblad': 'fd.nl',
   'Inc.com': 'inc.com',
+  'Le Temps': 'letemps.ch',
   'Los Angeles Times': 'latimes.com',
   'Medscape': 'medscape.com',
   'MIT Technology Review': 'technologyreview.com',
